--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sarahlim/voting-server.git"
+    "url": "git+https://github.com/sarahlim/voting-app.git"
   },
   "keywords": [],
   "author": "Sarah Lim <sarah@sarahlim.com> (http://sarahlim.com)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sarahlim/voting-server/issues"
+    "url": "https://github.com/sarahlim/voting-app/issues"
   },
-  "homepage": "https://github.com/sarahlim/voting-server#readme",
+  "homepage": "https://github.com/sarahlim/voting-app#readme",
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
